# NovaDE

./: .gitignore  ARCHITECTURE.md  AnforderungsAgent_Instructions.md  ArchitekturAgent_Instructions.md  Cargo.toml  DokumentationsAgent_Instructions.md  EXISTING_IMPLEMENTATIONS.md  EntwicklungsAgent_Instructions.md  GITHUB_RAW_LINKS.md  MISSING_IMPLEMENTATIONS.md  NovaDE Compositor Modul-Implementierungs-Prompts.md  PROJECT_README.md  ProjektOrchestratorGPT.md  README.md  TestAgent_Instructions.md  domain_core_components.md  domain_documentation_standards.md  domain_layer_principles.md  domain_layer_structure.md  domain_testing_strategy.md  gamma_correction.frag  order_aggregate_example.md  rust-toolchain.toml  shell.nix  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
clock_mcp_server/: Cargo.toml
clock_mcp_server/power_mcp_server/: Cargo.toml
clock_mcp_server/src/: main.rs
cpu_mcp_server/: Cargo.toml
cpu_mcp_server/src/: cpu_reader.rs  main.rs
nova_shell/: Cargo.toml
nova_shell/src/: application.rs  background.rs  launcher.rs  lib.rs  main.rs  notifications.rs  panel.rs  workspaces.rs
novade/: Cargo.toml  README.md
novade-compositor-core/: Cargo.toml
novade-compositor-core/src/: lib.rs  region.rs  subcompositor.rs  surface.rs
novade-compositor-core/src/input/: focus.rs  keyboard.rs  mod.rs  pointer.rs  seat.rs  touch.rs
novade-core/: Cargo.toml  README.md
novade-core/src/: debug_interface.rs  error.rs  error_tracking.rs  lib.rs  logging.rs  metrics_export.rs  performance_monitoring.rs
novade-core/src/config/: defaults.rs  file_loader.rs  loader.rs  mod.rs  provider.rs  types.rs  watcher.rs
novade-core/src/types/: app_identifier.rs  application.rs  assistant.rs  color.rs  display.rs  enums.rs  events.rs  general.rs  geometry.rs  mod.rs  orientation.rs  status.rs  system_health.rs
novade-core/src/utils/: async_utils.rs  file_utils.rs  fs.rs  mod.rs  paths.rs  string_utils.rs
novade-domain/: Cargo.toml
novade-domain/src/: common_events.rs  error.rs  lib.rs  shared_types.rs
novade-domain/src/ai/: logic_service.rs  logic_service_tests.rs  mod.rs
novade-domain/src/ai_interaction_service/: client_instance.rs  client_instance_tests.rs  connection_service.rs  consent_manager.rs  context_manager.rs  logic_service.rs  logic_service_tests.rs  mod.rs  nlp_processor.rs  skills_executor.rs  transport.rs  types.rs
novade-domain/src/cpu_usage_service/: mod.rs  tests.rs
novade-domain/src/display_configuration/: errors.rs  mod.rs  persistence.rs  persistence_tests.rs  service.rs  service_tests.rs  types.rs
novade-domain/src/entities/: configuration.rs  mod.rs  project.rs  task.rs  value_objects.rs
novade-domain/src/global_settings/: errors.rs  events.rs  mod.rs  paths.rs  persistence_iface.rs  providers.rs  service.rs  types.rs
novade-domain/src/global_settings_management/: errors.rs  errors_tests.rs  mod.rs  paths.rs  paths_tests.rs  persistence.rs  persistence_iface.rs  persistence_tests.rs  service.rs  service_tests.rs  types.rs  types_tests.rs
novade-domain/src/notification/: mod.rs
novade-domain/src/notification_service/: mod.rs
novade-domain/src/notifications/: core.rs  engine.rs  errors.rs  mod.rs  persistence.rs  persistence_iface.rs  rules_errors.rs  rules_persistence.rs  rules_types.rs  service.rs  types.rs
novade-domain/src/notifications_rules/: engine.rs  errors.rs  mod.rs  persistence.rs  persistence_iface.rs  types.rs
novade-domain/src/ports/: config_service.rs  mod.rs
novade-domain/src/power_management/: dbus_proxies.rs  mod.rs
novade-domain/src/repositories/: configuration.rs  project.rs  user_profile.rs
novade-domain/src/settings/: core.rs  service.rs
novade-domain/src/system_health_service/: error.rs  mod.rs  service.rs  service_tests.rs
novade-domain/src/theming/: core.rs  default_config_service.rs  default_theme_manager.rs  engine.rs  errors.rs  errors_tests.rs  events.rs  logic.rs  mod.rs  service.rs  service_tests.rs  types.rs
novade-domain/src/user_centric_services/: events.rs  mod.rs
novade-domain/src/window_management/: default_policy_manager.rs  mod.rs
novade-domain/src/window_management_policy/: errors.rs  (+3 more)
novade-domain/tests/: notification_service_policies_grouping_tests.rs
novade-plugin-manager/: Cargo.toml  Plugin.toml.example
novade-plugin-manager/src/: error.rs  lib.rs  manifest.rs
novade-project/novade-core/: Cargo.toml
novade-project/novade-domain/: Cargo.toml  README.md
novade-system/: Cargo.toml  README.md
novade-system/examples/: .placeholder  dbus_client_demo.rs  demo_core_system_client.rs  minimal_compositor.rs  run_echo_service.rs  run_input_manager.rs  test_upower_client.rs  vulkan_init_main.rs  vulkan_renderer_test.rs
novade-system/src/: application_manager.rs  audio_management.rs  dbus_menu_provider.rs  display_management.rs  error.rs  filesystem_service.rs  input_management.rs  lib.rs  main.rs  network_management.rs  renderer_interface.rs  settings_storage.rs  system_services.rs  system_settings_service.rs  theme_integration.rs  wayland_server_module_placeholder.rs  window_info_provider.rs  window_management.rs
novade-system/tests/: decoration_test.rs  echo_service_integration_test.rs
novade-ui/: Cargo.toml  build.rs
novade-ui/src/: app.rs  compositor_integration.rs  context_menu.rs  dbus_utils.rs  error.rs  input_integration.rs  lib.rs  main.rs  notification_ui.rs  panel_ui.rs  plugin_api.rs  quick_settings.rs  settings_ui.rs  style.css  theming_gtk.rs  toplevel_gobject.rs  ui_feedback.rs  ui_state.rs  window_manager.rs  workspace_switcher.rs
novade-ui/tests/: window_manager.rs
novade-vulkan-renderer/: Cargo.toml
novade-vulkan-renderer/src/: lib.rs  pipeline.rs  render_pass.rs  swapchain.rs  utils.rs
novade/assets/: .gitkeep
novade/benches/: .gitkeep
novade/doc/: testing_strategy.md
novade/src/: main.rs
novade/tests/: .gitkeep  orchestration_test.rs
power_mcp_server/: Cargo.toml
power_mcp_server/src/: main.rs
vivox_domain/: Cargo.toml
vivox_domain/src/: channel.rs  error.rs  events.rs  lib.rs  repositories.rs  user.rs
(+650 files in other folders)
