workspace = { members = ["clock_mcp_server", "power_mcp_server"] }
[package]
name = "vulkan_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkanalia = { version = "0.12.0", features = ["libloading", "window"] }
raw-window-handle = "0.5"
log = "0.4"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
vk-mem-rs = "0.2.3" # Added as per error.rs, though not directly in instance.rs
memoffset = "0.9" # For Vertex struct field offsets
glam = "0.24" # For matrix math
# Add other dependencies as needed by other modules
[features]
default = []
