[package]
name = "clock_mcp_server"
version = "0.1.0"
edition = "2021"
authors = ["NovaDE Team <nova-de@example.com>"]
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync", "io-std"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
jsonrpc-core = "18.0.0" 
uuid = { version = "1.6.1", features = ["v4"] } 
futures = "0.3" 
tokio-util = { version = "0.7.10", features = ["codec"] } 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
