[package]
name = "cpu_mcp_server"
version = "0.1.0"
edition = "2021"
authors = ["NovaDE Team <nova-de@example.com>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
