[package]
name = "novade-core"
version = "0.1.0"
edition = "2021"
publish = false
description = "Core layer for the NovaDE desktop environment"
authors = ["NovaDE Team <nova-de@example.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.70.0"

[dependencies]
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json", "registry", "std", "env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
once_cell = "1.17"
tokio = { version = "1.28", features = ["full"] }

# Added from spec
directories-next = "2.0.0"
tracing-appender = "0.2.3"
log = "0.4.21"
atty = "0.2"
num-traits = "0.2"

[dev-dependencies]
anyhow = "1.0"
tempfile = "3.5"
static_assertions = "1.1.0"
serde_json = "1.0"
