[package]
name = "novade-core"
version = "0.1.0"
edition = "2021"
authors = ["NovaDE Developers <dev@novade.org>"]
description = "Core infrastructure layer for NovaDE, providing foundational utilities, configuration, logging, and error handling."
license = "MIT OR Apache-2.0"
rust-version = "1.70.0"

[dependencies]
thiserror = "1.0.59"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = "0.4" #ANCHOR [NovaDE Developers <dev@novade.org>] Added for timestamping in log rotation
tracing = "0.1" #ANCHOR [NovaDE Developers <dev@novade.org>] Added for structured logging
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] } #ANCHOR [NovaDE Developers <dev@novade.org>] Added for structured logging
tracing-appender = "0.2" #ANCHOR [NovaDE Developers <dev@novade.org>] Added for log rotation
serde = { version = "1.0", features = ["derive"] } #ANCHOR [NovaDE Developers <dev@novade.org>] Added for serialization
toml = { version = "0.8.13" }
directories-next = { version = "2.0.0" }
log = { version = "0.4.21" }
atty = { version = "0.2.14" }
once_cell = { version = "1.19.0" }
num-traits = { version = "0.2.18" }
sentry = { version = "0.27.0", features = ["backtrace", "contexts", "panic", "transport"] } # Set to 0.27.0 as per baseline
# sentry-tracing commented out as 0.27.0 might not exist or was problematic

# Added for tests, but good to have as explicit dev-dependencies
[dev-dependencies]
static_assertions = "1.1.0"
tempfile = "3.10.1" # Or a version compatible with your needs
serde_json = "1.0" # For testing serde serialization in examples/tests
pretty_assertions = "1.4.0" # For nicer diffs in tests
rstest = "0.19.0" # For parameterized tests, if needed later
# uuid = { version = "1.8.0", features = ["v4", "serde"] } # Already in [dependencies]
# chrono = { version = "0.4.38", features = ["serde"] } # Already in [dependencies]
# thiserror = "1.0.59" # Already in [dependencies]
# toml = "0.8.13" # Already in [dependencies]
# serde = { version = "1.0.203", features = ["derive"] } # Already in [dependencies]
# once_cell = "1.19.0" # Already in [dependencies]
# num-traits = "0.2.18" # Already in [dependencies]
