[package]
name = "novade-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
novade-core = { path = "../novade-core" }
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] } # For WindowPlacementInfo ID and other potential uses
tracing = "0.1" # For logging in services
