[package]
name = "novade-system"
version = "0.1.0"
edition = "2021"

[dependencies]
novade-core = { path = "../novade-core" }
novade-domain = { path = "../novade-domain" }
async-trait = "0.1.68"
tokio = { version = "1", features = ["full"] }
wayland-server = "0.31.0"
wayland-protocols = "0.31.0"
smithay = { version = "=0.3.0", default-features = false, features = ["wayland-server"] } # Downgraded significantly & disabled default features
zbus = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" #ANCHOR [NovaDE Developers <dev@novade.org>] Added for state dump serialization
toml = "0.8" # For future config file parsing
tracing = "0.1" # Already present, version matches
tracing-subscriber = { version = "0.3", features = ["fmt"] }
input = "0.9.0" # Renamed from 'input' and version updated
udev = "0.7.0"
xkbcommon = { version = "0.7.0", features = ["default", "wayland"] } # Added features
thiserror = "1.0" # Added
libc = "0.2" # Added
drm = "0.11.0"
gbm = "0.11.0"
nix = { version = "0.27.1", features = ["fs", "mount", "socket", "process", "cmsg"] }
tempfile = "3.2" # For tests in socket.rs
byteorder = "1.4" # For message parsing
glob = "0.3"
sd-journal = "0.1.0"
futures-core = "0.3"
async-stream = "0.3"
signal-hook = "0.3"
polling = "3.4"
ash = "0.37" # For Vulkan bindings
ash-window = "0.12" # For Wayland surface creation with Ash
gpu-allocator = { version = "0.22", features = ["ash"] } # Rust wrapper for VMA
raw-window-handle = "0.5" # For integrating with Wayland surfaces
vk-mem = "0.2.3"
uuid = { version = "1.4.1", features = ["v4"] }
log = "0.4"
psutil = "3.2" #ANCHOR [NovaDE Developers <dev@novade.org>] Added for CPU and memory metrics
once_cell = "1.10" #ANCHOR [NovaDE Developers <dev@novade.org>] Added for static metric collectors
nvml-wrapper = "0.7" #ANCHOR [NovaDE Developers <dev@novade.org>] Added for NVIDIA GPU monitoring (optional)
#TODO [NovaDE Developers <dev@novade.org>] Research and add AMD GPU monitoring crate (e.g., amdgpu-sysfs or similar)
prometheus = { version = "0.13", features = ["process"] } #ANCHOR [NovaDE Developers <dev@novade.org>] Added for Prometheus metrics exposition
warp = "0.3" #ANCHOR [NovaDE Developers <dev@novade.org>] Added for exposing HTTP metrics endpoint


[features]
default = ["prometheus_exporter"] #ANCHOR [NovaDE Developers <dev@novade.org>] Added default feature for exporter
prometheus_exporter = [] #ANCHOR [NovaDE Developers <dev@novade.org>] Feature flag for enabling metrics exporter
# The enable-libinput-integration feature is removed as the dependencies are gone.
# If this feature flag was used for other purposes in the .rs files, those #[cfg] attributes
# will now effectively be false, which should be fine as we are providing pure stubs.
# For a clean slate, it's better to remove it if its only purpose was for the removed deps.
# If other parts of the code were using #[cfg(feature = "enable-libinput-integration")],
# they will now use their #[cfg(not(feature = "enable-libinput-integration"))] paths,
# which is the intended outcome for a pure stub implementation.

# Conditional dependency sections for libinput/udev are also removed.

[[example]]
name = "vulkan_renderer_test"
path = "examples/vulkan_renderer_test.rs"
