[package]
name = "novade-ui"
version = "0.1.0"
edition = "2021"
publish = false
description = "UI layer for the NovaDE desktop environment"
authors = ["NovaDE Team <nova-de@example.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
novade-core = { path = "../novade-core" }
novade-domain = { path = "../novade-domain" }
novade-system = { path = "../novade-system" }
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
thiserror = "1.0.40"
tracing = "0.1.37"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
iced = { version = "0.9.0", features = ["tokio", "image", "svg", "canvas"] }
iced_native = "0.10.0"
iced_style = "0.8.0"
iced_futures = "0.6.0"
image = "0.24.6"
rfd = "0.11.3"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
once_cell = "1.17.1"
parking_lot = "0.12.1"
futures = "0.3.28"
futures-util = { version = "0.3" } # Added for StreamExt
anyhow = "1.0.71"
gtk4 = "0.8.2"
adw = "0.6.1"
gio = "0.19.5"
glib = "0.19.5"
gtk4-layer-shell = "*"
dirs = "5.0.1"
notify = "5.1.0"
fontconfig = "0.7.0"
freetype-rs = "0.32.0"
svg = "0.13.1"
resvg = "0.35.0"
usvg = "0.35.0"
tiny-skia = "0.10.0"
zbus = "3" # Added for D-Bus communication

[build-dependencies]
glib-build-tools = "0.19.0" # Or the version compatible with your glib/gio

[[bin]]
name = "novade-ui-shelltest"
path = "src/main.rs"

[dev-dependencies]
mockall = "0.11" # Or latest compatible version
# tokio is already a main dependency with "full" features, so it's available for tests.
# zbus is already a main dependency.
# tracing-subscriber might be useful for seeing logs during tests:
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
