[package]
name = "novade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
novade-system = { path = "../novade-system" }
novade-ui = { path = "../novade-ui" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"

[dev-dependencies]
anyhow = "1.0" # For Result in tests
tracing = "0.1" # For logging within tests
tracing-subscriber = { version = "0.3", features = ["fmt", "test-writer"] } # For test output
