[package]
name = "vivox_domain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add dependencies as they become necessary, e.g.:
# uuid = { version = "1.0", features = ["v4", "serde"] }
# chrono = { version = "0.4", features = ["serde"] }
# thiserror = "1.0"
# async-trait = "0.1"
# serde = { version = "1.0", features = ["derive"] }
