[package]
name = "novade-core"
version = "0.1.0"
edition = "2021"
description = "Core layer for the NovaDE desktop environment"
authors = ["NovaDE Team"]
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
once_cell = "1.17"
tokio = { version = "1.28", features = ["full"] }

[dev-dependencies]
anyhow = "1.0"
tempfile = "3.5"
