[package]
name = "novade-domain"
version = "0.1.0"
edition = "2021"
description = "Domain layer for the NovaDE desktop environment"
authors = ["NovaDE Team"]
license = "MIT OR Apache-2.0"

[dependencies]
novade-core = { path = "../novade-core" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
once_cell = "1.17"
tokio = { version = "1.28", features = ["full"] }

[dev-dependencies]
anyhow = "1.0"
tempfile = "3.5"
mockall = "0.11"
